@@ -64,7 +64,6 @@ class Url(models.Model):
     last_checked = models.DateTimeField(blank=True, null=True)
     status = models.BooleanField(null=True)
     message = models.CharField(max_length=1024, blank=True, null=True)
-    still_exists = models.BooleanField(default=False)
     redirect_to = models.TextField(blank=True)
 
     @property
